LEXPARPY/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    LESS
    EQUAL
    GREATEREQUAL
    SEMICOLON
    SUBELAPIZ
    RE
    COMMA
    GD
    AV
    LESSEQUAL
    LBLOCK
    GI
    GREATER
    DEQUAL
    BAJALAPIZ
    DISTINT
    SI
    RBLOCK

Grammar

Rule 0     S' -> program
Rule 1     program -> expression
Rule 2     expression -> PARA ID DOUPOINT term expression FIN
Rule 3     expression -> PARA ID expression FIN
Rule 4     expression -> AVANZA DOUPOINT ID expression
Rule 5     expression -> AVANZA term expression
Rule 6     expression -> RETROCEDE term expression
Rule 7     expression -> GIRADERECHA term expression
Rule 8     expression -> GIRAIZQUIERDA term expression
Rule 9     expression -> REPITE term LBRACKET expression RBRACKET
Rule 10    expression -> PONPOS LBRACKET term term RBRACKET
Rule 11    expression -> PONRUMBO MINUS term
Rule 12    expression -> PONRUMBO term
Rule 13    expression -> CENTRO
Rule 14    expression -> <empty>
Rule 15    expression -> expression PLUS term
Rule 16    expression -> expression MINUS term
Rule 17    expression -> term
Rule 18    term -> term TIMES factor
Rule 19    term -> term DIVIDE factor
Rule 20    term -> factor
Rule 21    factor -> NUMBER
Rule 22    factor -> ID
Rule 23    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

AV                   : 
AVANZA               : 4 5
BAJALAPIZ            : 
CENTRO               : 13
COMMA                : 
DEQUAL               : 
DISTINT              : 
DIVIDE               : 19
DOUPOINT             : 2 4
EQUAL                : 
FIN                  : 2 3
GD                   : 
GI                   : 
GIRADERECHA          : 7
GIRAIZQUIERDA        : 8
GREATER              : 
GREATEREQUAL         : 
ID                   : 2 3 4 22
LBLOCK               : 
LBRACKET             : 9 10
LESS                 : 
LESSEQUAL            : 
LPAREN               : 23
MINUS                : 11 16
NUMBER               : 21
PARA                 : 2 3
PLUS                 : 15
PONPOS               : 10
PONRUMBO             : 11 12
RBLOCK               : 
RBRACKET             : 9 10
RE                   : 
REPITE               : 9
RETROCEDE            : 6
RPAREN               : 23
SEMICOLON            : 
SI                   : 
SUBELAPIZ            : 
TIMES                : 18
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 4 5 6 7 8 9 15 16 23
factor               : 18 19 20
program              : 0
term                 : 2 5 6 7 8 9 10 10 11 12 15 16 17 18 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . expression
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    $end            reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    program                        shift and go to state 5
    expression                     shift and go to state 16
    factor                         shift and go to state 6

state 1

    (2) expression -> PARA . ID DOUPOINT term expression FIN
    (3) expression -> PARA . ID expression FIN

    ID              shift and go to state 17


state 2

    (21) factor -> NUMBER .

    TIMES           reduce using rule 21 (factor -> NUMBER .)
    DIVIDE          reduce using rule 21 (factor -> NUMBER .)
    PLUS            reduce using rule 21 (factor -> NUMBER .)
    MINUS           reduce using rule 21 (factor -> NUMBER .)
    $end            reduce using rule 21 (factor -> NUMBER .)
    RPAREN          reduce using rule 21 (factor -> NUMBER .)
    FIN             reduce using rule 21 (factor -> NUMBER .)
    RBRACKET        reduce using rule 21 (factor -> NUMBER .)
    PARA            reduce using rule 21 (factor -> NUMBER .)
    AVANZA          reduce using rule 21 (factor -> NUMBER .)
    RETROCEDE       reduce using rule 21 (factor -> NUMBER .)
    GIRADERECHA     reduce using rule 21 (factor -> NUMBER .)
    GIRAIZQUIERDA   reduce using rule 21 (factor -> NUMBER .)
    REPITE          reduce using rule 21 (factor -> NUMBER .)
    PONPOS          reduce using rule 21 (factor -> NUMBER .)
    PONRUMBO        reduce using rule 21 (factor -> NUMBER .)
    CENTRO          reduce using rule 21 (factor -> NUMBER .)
    NUMBER          reduce using rule 21 (factor -> NUMBER .)
    ID              reduce using rule 21 (factor -> NUMBER .)
    LPAREN          reduce using rule 21 (factor -> NUMBER .)
    LBRACKET        reduce using rule 21 (factor -> NUMBER .)


state 3

    (4) expression -> AVANZA . DOUPOINT ID expression
    (5) expression -> AVANZA . term expression
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    DOUPOINT        shift and go to state 19
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 18
    factor                         shift and go to state 6

state 4

    (8) expression -> GIRAIZQUIERDA . term expression
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 20
    factor                         shift and go to state 6

state 5

    (0) S' -> program .



state 6

    (20) term -> factor .

    TIMES           reduce using rule 20 (term -> factor .)
    DIVIDE          reduce using rule 20 (term -> factor .)
    PLUS            reduce using rule 20 (term -> factor .)
    MINUS           reduce using rule 20 (term -> factor .)
    $end            reduce using rule 20 (term -> factor .)
    RPAREN          reduce using rule 20 (term -> factor .)
    FIN             reduce using rule 20 (term -> factor .)
    RBRACKET        reduce using rule 20 (term -> factor .)
    PARA            reduce using rule 20 (term -> factor .)
    AVANZA          reduce using rule 20 (term -> factor .)
    RETROCEDE       reduce using rule 20 (term -> factor .)
    GIRADERECHA     reduce using rule 20 (term -> factor .)
    GIRAIZQUIERDA   reduce using rule 20 (term -> factor .)
    REPITE          reduce using rule 20 (term -> factor .)
    PONPOS          reduce using rule 20 (term -> factor .)
    PONRUMBO        reduce using rule 20 (term -> factor .)
    CENTRO          reduce using rule 20 (term -> factor .)
    NUMBER          reduce using rule 20 (term -> factor .)
    ID              reduce using rule 20 (term -> factor .)
    LPAREN          reduce using rule 20 (term -> factor .)
    LBRACKET        reduce using rule 20 (term -> factor .)


state 7

    (6) expression -> RETROCEDE . term expression
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 21
    factor                         shift and go to state 6

state 8

    (7) expression -> GIRADERECHA . term expression
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 22
    factor                         shift and go to state 6

state 9

    (13) expression -> CENTRO .

    PLUS            reduce using rule 13 (expression -> CENTRO .)
    MINUS           reduce using rule 13 (expression -> CENTRO .)
    $end            reduce using rule 13 (expression -> CENTRO .)
    RPAREN          reduce using rule 13 (expression -> CENTRO .)
    FIN             reduce using rule 13 (expression -> CENTRO .)
    RBRACKET        reduce using rule 13 (expression -> CENTRO .)


state 10

    (11) expression -> PONRUMBO . MINUS term
    (12) expression -> PONRUMBO . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    MINUS           shift and go to state 24
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 23
    factor                         shift and go to state 6

state 11

    (23) factor -> LPAREN . expression RPAREN
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    RPAREN          reduce using rule 14 (expression -> .)
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 25
    factor                         shift and go to state 6

state 12

    (22) factor -> ID .

    TIMES           reduce using rule 22 (factor -> ID .)
    DIVIDE          reduce using rule 22 (factor -> ID .)
    PLUS            reduce using rule 22 (factor -> ID .)
    MINUS           reduce using rule 22 (factor -> ID .)
    $end            reduce using rule 22 (factor -> ID .)
    RPAREN          reduce using rule 22 (factor -> ID .)
    FIN             reduce using rule 22 (factor -> ID .)
    RBRACKET        reduce using rule 22 (factor -> ID .)
    PARA            reduce using rule 22 (factor -> ID .)
    AVANZA          reduce using rule 22 (factor -> ID .)
    RETROCEDE       reduce using rule 22 (factor -> ID .)
    GIRADERECHA     reduce using rule 22 (factor -> ID .)
    GIRAIZQUIERDA   reduce using rule 22 (factor -> ID .)
    REPITE          reduce using rule 22 (factor -> ID .)
    PONPOS          reduce using rule 22 (factor -> ID .)
    PONRUMBO        reduce using rule 22 (factor -> ID .)
    CENTRO          reduce using rule 22 (factor -> ID .)
    NUMBER          reduce using rule 22 (factor -> ID .)
    ID              reduce using rule 22 (factor -> ID .)
    LPAREN          reduce using rule 22 (factor -> ID .)
    LBRACKET        reduce using rule 22 (factor -> ID .)


state 13

    (17) expression -> term .
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor

    PLUS            reduce using rule 17 (expression -> term .)
    MINUS           reduce using rule 17 (expression -> term .)
    $end            reduce using rule 17 (expression -> term .)
    RPAREN          reduce using rule 17 (expression -> term .)
    FIN             reduce using rule 17 (expression -> term .)
    RBRACKET        reduce using rule 17 (expression -> term .)
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26


state 14

    (9) expression -> REPITE . term LBRACKET expression RBRACKET
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 28
    factor                         shift and go to state 6

state 15

    (10) expression -> PONPOS . LBRACKET term term RBRACKET

    LBRACKET        shift and go to state 29


state 16

    (1) program -> expression .
    (15) expression -> expression . PLUS term
    (16) expression -> expression . MINUS term

    $end            reduce using rule 1 (program -> expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31


state 17

    (2) expression -> PARA ID . DOUPOINT term expression FIN
    (3) expression -> PARA ID . expression FIN
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    DOUPOINT        shift and go to state 32
    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    FIN             reduce using rule 14 (expression -> .)
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 33
    factor                         shift and go to state 6

state 18

    (5) expression -> AVANZA term . expression
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26
    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    $end            reduce using rule 14 (expression -> .)
    RPAREN          reduce using rule 14 (expression -> .)
    FIN             reduce using rule 14 (expression -> .)
    RBRACKET        reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 34
    factor                         shift and go to state 6

state 19

    (4) expression -> AVANZA DOUPOINT . ID expression

    ID              shift and go to state 35


state 20

    (8) expression -> GIRAIZQUIERDA term . expression
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26
    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    $end            reduce using rule 14 (expression -> .)
    RPAREN          reduce using rule 14 (expression -> .)
    FIN             reduce using rule 14 (expression -> .)
    RBRACKET        reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 36
    factor                         shift and go to state 6

state 21

    (6) expression -> RETROCEDE term . expression
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26
    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    $end            reduce using rule 14 (expression -> .)
    RPAREN          reduce using rule 14 (expression -> .)
    FIN             reduce using rule 14 (expression -> .)
    RBRACKET        reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 37
    factor                         shift and go to state 6

state 22

    (7) expression -> GIRADERECHA term . expression
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor
    (2) expression -> . PARA ID DOUPOINT term expression FIN
    (3) expression -> . PARA ID expression FIN
    (4) expression -> . AVANZA DOUPOINT ID expression
    (5) expression -> . AVANZA term expression
    (6) expression -> . RETROCEDE term expression
    (7) expression -> . GIRADERECHA term expression
    (8) expression -> . GIRAIZQUIERDA term expression
    (9) expression -> . REPITE term LBRACKET expression RBRACKET
    (10) expression -> . PONPOS LBRACKET term term RBRACKET
    (11) expression -> . PONRUMBO MINUS term
    (12) expression -> . PONRUMBO term
    (13) expression -> . CENTRO
    (14) expression -> .
    (15) expression -> . expression PLUS term
    (16) expression -> . expression MINUS term
    (17) expression -> . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26
    PARA            shift and go to state 1
    AVANZA          shift and go to state 3
    RETROCEDE       shift and go to state 7
    GIRADERECHA     shift and go to state 8
    GIRAIZQUIERDA   shift and go to state 4
    REPITE          shift and go to state 14
    PONPOS          shift and go to state 15
    PONRUMBO        shift and go to state 10
    CENTRO          shift and go to state 9
    PLUS            reduce using rule 14 (expression -> .)
    MINUS           reduce using rule 14 (expression -> .)
    $end            reduce using rule 14 (expression -> .)
    RPAREN          reduce using rule 14 (expression -> .)
    FIN             reduce using rule 14 (expression -> .)
    RBRACKET        reduce using rule 14 (expression -> .)
    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 13
    expression                     shift and go to state 38
    factor                         shift and go to state 6

state 23

    (12) expression -> PONRUMBO term .
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor

    PLUS            reduce using rule 12 (expression -> PONRUMBO term .)
    MINUS           reduce using rule 12 (expression -> PONRUMBO term .)
    $end            reduce using rule 12 (expression -> PONRUMBO term .)
    RPAREN          reduce using rule 12 (expression -> PONRUMBO term .)
    FIN             reduce using rule 12 (expression -> PONRUMBO term .)
    RBRACKET        reduce using rule 12 (expression -> PONRUMBO term .)
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26


state 24

    (11) expression -> PONRUMBO MINUS . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 39
    factor                         shift and go to state 6

state 25

    (23) factor -> LPAREN expression . RPAREN
    (15) expression -> expression . PLUS term
    (16) expression -> expression . MINUS term

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31


state 26

    (19) term -> term DIVIDE . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    factor                         shift and go to state 41

state 27

    (18) term -> term TIMES . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    factor                         shift and go to state 42

state 28

    (9) expression -> REPITE term . LBRACKET expression RBRACKET
    (18) term -> term . TIMES factor
    (19) term -> term . DIVIDE factor

    LBRACKET        shift and go to state 43
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 26


state 29

    (10) expression -> PONPOS LBRACKET . term term RBRACKET
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 44
    factor                         shift and go to state 6

state 30

    (15) expression -> expression PLUS . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 45
    factor                         shift and go to state 6

state 31

    (16) expression -> expression MINUS . term
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 46
    factor                         shift and go to state 6

state 32

    (2) expression -> PARA ID DOUPOINT . term expression FIN
    (18) term -> . term TIMES factor
    (19) term -> . term DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUMBER
    (22) factor -> . ID
    (23) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    ID              shift and go to state 12
    LPAREN          shift and go to state 11

    term                           shift and go to state 47
    factor                         shift and go to state 6

state 33

    (3) expression -> PARA ID expression . FIN
    (15) expression -> expression . PLUS term
    (16) expression -> expression . MINUS term

    FIN             shift and go to state 48
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31


state 34

    (5) expression -> AVANZA term expression .
    (15) expression -> expression . PLUS term
    (16) expression -> expression . MINUS term

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    $end            reduce using rule 5 (expression -> AVANZA term expression .)
    RPAREN          reduce using rule 5 (expression -> AVANZA term expression .)
    FIN             reduce using rule 5 (expression -> AVANZA term expression .)
    RBRACKET        reduce using rule 5 (expression -> AVANZA term expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31

  ! PLUS            [ reduce using rule 5 (expression -> AVANZA term expression .) ]
  ! MINUS           [ reduce using rule 5 (expression -> AVANZA term expression .) ]


state 35
